v1.1.0bot